feat: preparación de datos  y escalado para autoencoder

--- a/Mi Codigo/Archivo.ipynb
+++ b/Mi Codigo/Archivo.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "68a5830c",
    "metadata": {},
    "outputs": [
@@ -75,56 +75,148 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total de variables creadas: 20\n",
-      "Inconsistencias detectadas: 14180\n"
+      "\n",
+      "Variables creadas: 31\n",
+      "Inconsistencias detectadas: 89958\n"
      ]
     }
    ],
    "source": [
-    "# SELECCIÓN DE VARIABLES Y CREACIÓN DE ATRIBUTOS DERIVADOS\n",
-    "# Variables de tiempo (convertir días a años)\n",
+    "# Selección de variables y creación de nuevas características\n",
+    "\n",
+    "# Variables de tiempo\n",
     "datos['EDAD'] = -datos['DAYS_BIRTH'] / 365\n",
     "datos['AÑOS_EMPLEADO'] = -datos['DAYS_EMPLOYED'] / 365\n",
     "datos['AÑOS_EMPLEADO'] = datos['AÑOS_EMPLEADO'].replace(1000.67, np.nan)\n",
+    "datos['DIAS_CAMBIO_TELEFONO'] = -datos['DAYS_LAST_PHONE_CHANGE']\n",
+    "datos['DIAS_PUBLICACION_ID'] = -datos['DAYS_ID_PUBLISH']\n",
     "\n",
-    "# Ratios financieros básicos\n",
+    "# Ratios financieros\n",
     "datos['RATIO_CREDITO_INGRESO'] = datos['AMT_CREDIT'] / datos['AMT_INCOME_TOTAL']\n",
     "datos['RATIO_ANUALIDAD_INGRESO'] = datos['AMT_ANNUITY'] / datos['AMT_INCOME_TOTAL']\n",
+    "datos['RATIO_ANUALIDAD_CREDITO'] = datos['AMT_ANNUITY'] / datos['AMT_CREDIT']\n",
+    "datos['RATIO_BIENES_CREDITO'] = datos['AMT_GOODS_PRICE'] / datos['AMT_CREDIT']\n",
     "datos['INGRESO_PER_CAPITA'] = datos['AMT_INCOME_TOTAL'] / (datos['CNT_FAM_MEMBERS'] + 1)\n",
+    "datos['CREDITO_PER_CAPITA'] = datos['AMT_CREDIT'] / (datos['CNT_FAM_MEMBERS'] + 1)\n",
     "\n",
-    "# Detectar inconsistencias sospechosas\n",
-    "datos['INCONSISTENCIA_SCORE'] = 0\n",
+    "# Detección de inconsistencias\n",
+    "datos['INCONS_SCORE_INGRESO'] = 0\n",
     "mask1 = (datos['EXT_SOURCE_2'] < 0.3) & (datos['AMT_INCOME_TOTAL'] > datos['AMT_INCOME_TOTAL'].quantile(0.75))\n",
-    "datos.loc[mask1, 'INCONSISTENCIA_SCORE'] = 1\n",
+    "datos.loc[mask1, 'INCONS_SCORE_INGRESO'] = 1\n",
     "\n",
-    "datos['INCONSISTENCIA_FAMILIA'] = 0\n",
+    "datos['INCONS_FAMILIA_INGRESO'] = 0\n",
     "mask2 = (datos['CNT_FAM_MEMBERS'] >= 4) & (datos['AMT_INCOME_TOTAL'] < datos['AMT_INCOME_TOTAL'].quantile(0.25))\n",
-    "datos.loc[mask2, 'INCONSISTENCIA_FAMILIA'] = 1\n",
+    "datos.loc[mask2, 'INCONS_FAMILIA_INGRESO'] = 1\n",
     "\n",
-    "datos['TOTAL_INCONSISTENCIAS'] = datos['INCONSISTENCIA_SCORE'] + datos['INCONSISTENCIA_FAMILIA']\n",
+    "columnas_docs = [col for col in datos.columns if 'FLAG_DOCUMENT' in col]\n",
+    "datos['TOTAL_DOCUMENTOS'] = datos[columnas_docs].sum(axis=1)\n",
+    "datos['INCONS_DOCS_CREDITO'] = 0\n",
+    "mask3 = (datos['TOTAL_DOCUMENTOS'] <= 2) & (datos['AMT_CREDIT'] > datos['AMT_CREDIT'].quantile(0.75))\n",
+    "datos.loc[mask3, 'INCONS_DOCS_CREDITO'] = 1\n",
+    "\n",
+    "datos['TOTAL_INCONSISTENCIAS'] = (datos['INCONS_SCORE_INGRESO'] + \n",
+    "                                   datos['INCONS_FAMILIA_INGRESO'] + \n",
+    "                                   datos['INCONS_DOCS_CREDITO'])\n",
     "\n",
     "# Variables de círculo social\n",
     "datos['DEFAULTS_SOCIALES'] = (datos['DEF_30_CNT_SOCIAL_CIRCLE'].fillna(0) + \n",
     "                               datos['DEF_60_CNT_SOCIAL_CIRCLE'].fillna(0))\n",
+    "datos['OBSERVACIONES_SOCIALES'] = (datos['OBS_30_CNT_SOCIAL_CIRCLE'].fillna(0) + \n",
+    "                                    datos['OBS_60_CNT_SOCIAL_CIRCLE'].fillna(0))\n",
+    "datos['TASA_DEFAULT_SOCIAL'] = datos['DEFAULTS_SOCIALES'] / (datos['OBSERVACIONES_SOCIALES'] + 1)\n",
     "datos['TIENE_CIRCULO_RIESGOSO'] = (datos['DEFAULTS_SOCIALES'] > 0).astype(int)\n",
     "\n",
-    "# Flags de riesgo\n",
+    "# Variables de estabilidad\n",
+    "datos['TIENE_AUTO'] = (~datos['OWN_CAR_AGE'].isna()).astype(int)\n",
+    "datos['TIENE_PROPIEDAD'] = (datos['FLAG_OWN_REALTY'] == 'Y').astype(int)\n",
+    "datos['CAMBIO_TELEFONO_RECIENTE'] = (datos['DIAS_CAMBIO_TELEFONO'] < 180).astype(int)\n",
+    "datos['PUBLICACION_ID_RECIENTE'] = (datos['DIAS_PUBLICACION_ID'] < 365).astype(int)\n",
+    "\n",
+    "datos['SCORE_ESTABILIDAD'] = (datos['TIENE_AUTO'] + datos['TIENE_PROPIEDAD'] + \n",
+    "                               (1 - datos['CAMBIO_TELEFONO_RECIENTE']) + \n",
+    "                               (1 - datos['PUBLICACION_ID_RECIENTE']))\n",
+    "\n",
+    "# Interacciones y flags de riesgo\n",
+    "datos['RATIO_EDAD_EMPLEO'] = datos['EDAD'] / (datos['AÑOS_EMPLEADO'] + 1)\n",
     "datos['SOBREENDEUDAMIENTO'] = (datos['RATIO_CREDITO_INGRESO'] > 8).astype(int)\n",
     "datos['JOVEN_CREDITO_ALTO'] = ((datos['EDAD'] < 25) & (datos['AMT_CREDIT'] > 500000)).astype(int)\n",
+    "datos['EMPLEO_NUEVO_CREDITO_ALTO'] = ((datos['AÑOS_EMPLEADO'] < 0.5) & (datos['AMT_CREDIT'] > 300000)).astype(int)\n",
     "\n",
-    "# Seleccionar variables finales\n",
+    "columnas_bureau = [col for col in datos.columns if 'AMT_REQ_CREDIT_BUREAU' in col]\n",
+    "datos['TOTAL_CONSULTAS_BUREAU'] = datos[columnas_bureau].sum(axis=1)\n",
+    "datos['CONSULTAS_EXCESIVAS'] = (datos['TOTAL_CONSULTAS_BUREAU'] > 5).astype(int)\n",
+    "\n",
+    "# Lista de variables seleccionadas\n",
     "variables_seleccionadas = [\n",
     "    'AMT_INCOME_TOTAL', 'AMT_CREDIT', 'AMT_ANNUITY',\n",
-    "    'RATIO_CREDITO_INGRESO', 'RATIO_ANUALIDAD_INGRESO', 'INGRESO_PER_CAPITA',\n",
+    "    'RATIO_CREDITO_INGRESO', 'RATIO_ANUALIDAD_INGRESO', 'RATIO_ANUALIDAD_CREDITO',\n",
+    "    'INGRESO_PER_CAPITA', 'CREDITO_PER_CAPITA',\n",
     "    'EXT_SOURCE_2', 'EXT_SOURCE_3',\n",
-    "    'EDAD', 'AÑOS_EMPLEADO', 'CNT_CHILDREN', 'CNT_FAM_MEMBERS',\n",
-    "    'REGION_RATING_CLIENT', 'DAYS_REGISTRATION',\n",
-    "    'TOTAL_INCONSISTENCIAS', 'INCONSISTENCIA_SCORE', 'INCONSISTENCIA_FAMILIA',\n",
-    "    'TIENE_CIRCULO_RIESGOSO', 'SOBREENDEUDAMIENTO', 'JOVEN_CREDITO_ALTO'\n",
+    "    'EDAD', 'AÑOS_EMPLEADO', 'DAYS_REGISTRATION', 'RATIO_EDAD_EMPLEO',\n",
+    "    'CNT_CHILDREN', 'CNT_FAM_MEMBERS', 'TASA_DEFAULT_SOCIAL', 'TIENE_CIRCULO_RIESGOSO',\n",
+    "    'REGION_RATING_CLIENT', 'REG_CITY_NOT_WORK_CITY',\n",
+    "    'TOTAL_DOCUMENTOS', 'SCORE_ESTABILIDAD',\n",
+    "    'TOTAL_INCONSISTENCIAS', 'INCONS_SCORE_INGRESO', \n",
+    "    'INCONS_FAMILIA_INGRESO', 'INCONS_DOCS_CREDITO',\n",
+    "    'SOBREENDEUDAMIENTO', 'JOVEN_CREDITO_ALTO', 'EMPLEO_NUEVO_CREDITO_ALTO', \n",
+    "    'CONSULTAS_EXCESIVAS', 'CAMBIO_TELEFONO_RECIENTE'\n",
     "]\n",
     "\n",
-    "print(f\"Total de variables creadas: {len(variables_seleccionadas)}\")\n",
+    "print(f\"\\nVariables creadas: {len(variables_seleccionadas)}\")\n",
     "print(f\"Inconsistencias detectadas: {datos['TOTAL_INCONSISTENCIAS'].sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "dc664c04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Datos preparados:\n",
+      "Entrenamiento: (226148, 31)\n",
+      "Validacion: (56538, 31)\n",
+      "Dataset completo: (307511, 31)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# PREPARACION DE DATOS\n",
+    "\n",
+    "# Crear dataset de trabajo\n",
+    "datos_trabajo = datos[variables_seleccionadas + ['TARGET', 'SK_ID_CURR']].copy()\n",
+    "\n",
+    "# Imputar valores nulos\n",
+    "for col in variables_seleccionadas:\n",
+    "    if datos_trabajo[col].isnull().sum() > 0:\n",
+    "        if col in ['EXT_SOURCE_2', 'EXT_SOURCE_3']:\n",
+    "            datos_trabajo[col].fillna(datos_trabajo[col].median(), inplace=True)\n",
+    "        else:\n",
+    "            datos_trabajo[col].fillna(0, inplace=True)\n",
+    "\n",
+    "# Separar datos normales para entrenar el autoencoder\n",
+    "datos_normales = datos_trabajo[datos_trabajo['TARGET'] == 0].copy()\n",
+    "X_normales = datos_normales[variables_seleccionadas].values\n",
+    "X_todos = datos_trabajo[variables_seleccionadas].values\n",
+    "y_todos = datos_trabajo['TARGET'].values\n",
+    "\n",
+    "# Dividir en entrenamiento y validacion\n",
+    "X_entrenamiento, X_validacion = train_test_split(X_normales, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Escalar datos\n",
+    "escalador = RobustScaler()\n",
+    "X_entrenamiento_escalado = escalador.fit_transform(X_entrenamiento)\n",
+    "X_validacion_escalado = escalador.transform(X_validacion)\n",
+    "X_todos_escalado = escalador.transform(X_todos)\n",
+    "\n",
+    "print(f\"\\nDatos preparados:\")\n",
+    "print(f\"Entrenamiento: {X_entrenamiento.shape}\")\n",
+    "print(f\"Validacion: {X_validacion.shape}\")\n",
+    "print(f\"Dataset completo: {X_todos.shape}\")"
    ]
   }
  ],
